@@ -8,6 +8,12 @@ Version 1.7.3
        an invalid ssl certificate. (Stefan)
 - BUG: Issue #156: 	subdir within WC not
        recognized as WC. (Stefan)
+- BUG: Issue #157: Title Bar not updating with
+       currently viewed repository. (Stefan)
+- BUG: Issue #158: IBugTraqProvider2 CheckCommit
+       returns a relative commonURL. (Stefan)
+- BUG: Issue #159: folder browse dialog can be
+       closed with invalid paths. (Stefan)
 
 Version 1.7.2
 - BUG: Issue #111: Crash in initializing
